# raycaster-game

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/datamodel/: CMakeLists.txt  datamodel_actor.cpp  datamodel_actor.hpp  datamodel_commontypes.cpp  datamodel_commontypes.hpp  datamodel_gamelevel.cpp  datamodel_gamelevel.hpp  datamodel_gamerun.cpp  datamodel_gamerun.hpp  datamodel_gamestate.cpp  datamodel_gamestate.hpp  datamodel_numeric_value.cpp  datamodel_numeric_value.hpp  datamodel_tile.cpp  datamodel_tile.hpp  datamodel_tilemap.cpp  datamodel_tilemap.hpp  datamodel_tiletype.cpp  datamodel_tiletype.hpp  datamodel_tiletypestate.cpp  datamodel_tiletypestate.hpp  datamodel_units.cpp  datamodel_units.hpp
src/gameloader/: CMakeLists.txt  gameloader_json.cpp  gameloader_json.hpp
src/gamemath/: CMakeLists.txt  gamemath_camera2d.cpp  gamemath_camera2d.hpp  gamemath_camera3d.cpp  gamemath_camera3d.hpp  gamemath_distances.cpp  gamemath_distances.hpp  gamemath_raycast.cpp  gamemath_raycast.hpp
src/toy1-datamodel-only/: CMakeLists.txt  main.cpp
src/toy2-load-json/: CMakeLists.txt  main.cpp  sample.json
src/toy3-visualize-rays/: CMakeLists.txt  main.cpp  sample.json
src/toy4-sdl-rays/: CMakeLists.txt  main.cpp
src/toy5-3d-raycast/: CMakeLists.txt  main.cpp
